feat(dashboard): affichage des comptes ainsi que de leurs charges

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,1 +1,11 @@
+// Import settings
+@import "~bootstrap/scss/functions";
+@import "settings/variables";
+
+// Import tools
 @import "~bootstrap/scss/bootstrap";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
+@import "./objects/container";
