--- a/templates/blocks/topbar.html.twig
+++ b/templates/blocks/topbar.html.twig
@@ -1,17 +1,46 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand fixed-top navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Moneyer</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topbar" aria-controls="topbar" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="topbar">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item px-2">
+                    <a class="nav-link" aria-current="page" href="#">
                         {% trans %}Home{% endtrans %}
                     </a>
                 </li>
             </ul>
-        </div>
+
+        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                <ul class="navbar-nav">
+                    <li class="nav-item px-2 dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ app.user.fullname }}
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-user"></i>
+                                    {% trans %}Profile{% endtrans %}
+                                </a>
+                            </li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="{{ path('admin') }}">
+                                        <i class="fas fa-tachometer-alt"></i>
+                                        {% trans %}Admin{% endtrans %}
+                                    </a>
+                                </li>
+                            {% endif %}
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" href="{{ path('app_logout') }}">
+                                    <i class="fas fa-sign-out-alt"></i>
+                                    {% trans %}Logout{% endtrans %}
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+        {% endif %}
     </div>
 </nav>
