feat(charge): création de la page d'ajout à un compte

--- a/templates/blocks/cards/card--account.html.twig
+++ b/templates/blocks/cards/card--account.html.twig
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#" data-action="card-account#openModal">
+                        <a class="dropdown-item" href="{{ path('bank_charge_add', { account: account.id }) }}">
                             {% trans %}Add charge{% endtrans %}
                         </a>
                     </li>
