feat(share): création du Voter

--- a/templates/blocks/topbar.html.twig
+++ b/templates/blocks/topbar.html.twig
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Moneyer</a>
+        <a class="navbar-brand" href="{{ path('dashboard') }}">Moneyer</a>
             <ul class="navbar-nav me-auto">
                 <li class="nav-item px-2">
-                    <a class="nav-link" aria-current="page" href="#">
+                    <a class="nav-link" aria-current="page" href="{{ path('dashboard') }}">
                         {% trans %}Home{% endtrans %}
                     </a>
                 </li>
