chore(transfer): design des pages

--- a/templates/pages/bank/resource/update.html.twig
+++ b/templates/pages/bank/resource/update.html.twig
@@ -3,18 +3,20 @@
 {% block title %}{% trans %}Update resource{% endtrans %}{{ parent() }}{% endblock %}
 
 {% block body %}
-    <div class="mb-3">
-        <h1>{% trans %}Update resource{% endtrans %}</h1>
-        {{ form_start(form) }}
-        {{ form_rest(form) }}
-        <button type="submit" class="btn btn-primary">
-            <i class="fas fa-save"></i>
-            {% trans %}Update{% endtrans %}
-        </button>
-        <a  class="btn btn-danger" href="{{ path('bank_resource_delete', { resource: resource.id }) }}">
-            <i class="fas fa-trash-alt"></i>
-            {% trans %}Delete{% endtrans %}
-        </a>
-        {{ form_end(form) }}
+    <div class="container">
+        <div class="mb-3">
+            <h1>{% trans %}Update resource{% endtrans %}</h1>
+            {{ form_start(form) }}
+            {{ form_rest(form) }}
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-save"></i>
+                {% trans %}Update{% endtrans %}
+            </button>
+            <a class="btn btn-danger" href="{{ path('bank_resource_delete', { resource: resource.id }) }}">
+                <i class="fas fa-trash-alt"></i>
+                {% trans %}Delete{% endtrans %}
+            </a>
+            {{ form_end(form) }}
+        </div>
     </div>
 {% endblock %}
