--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,4 +8,6 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
+// Import objects
 @import "./objects/container";
+@import "./objects/table";
