--- a/templates/pages/bank/account/update.html.twig
+++ b/templates/pages/bank/account/update.html.twig
@@ -3,14 +3,16 @@
 {% block title %}{% trans %}Update account{% endtrans %}{{ parent() }}{% endblock %}
 
 {% block body %}
-    <div class="mb-3">
-        <h1>{% trans %}Update account{% endtrans %}</h1>
-        {{ form_start(form) }}
-        {{ form_rest(form) }}
-        <button type="submit" class="btn btn-primary">
-            <i class="fas fa-save"></i>
-            {% trans %}Save{% endtrans %}
-        </button>
-        {{ form_end(form) }}
+    <div class="container">
+        <div class="mb-3">
+            <h1>{% trans %}Update account{% endtrans %}</h1>
+            {{ form_start(form) }}
+            {{ form_rest(form) }}
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-save"></i>
+                {% trans %}Save{% endtrans %}
+            </button>
+            {{ form_end(form) }}
+        </div>
     </div>
 {% endblock %}
