--- a/templates/pages/bank/charge/delete.html.twig
+++ b/templates/pages/bank/charge/delete.html.twig
@@ -3,16 +3,18 @@
 {% block title %}{% trans %}Delete charge{% endtrans %}{{ parent() }}{% endblock %}
 
 {% block body %}
-    <div class="mb-3">
-        <h1>{% trans %}Delete charge{% endtrans %}</h1>
-        <p>
-            {% trans %}Delete charge confirmation message.{% endtrans %}
-        </p>
-        <form method="post">
-            <button type="submit" class="btn btn-primary">
-                <i class="fas fa-save"></i>
-                {% trans %}Confirm{% endtrans %}
-            </button>
-        </form>
+    <div class="container">
+        <div class="mb-3">
+            <h1>{% trans %}Delete charge{% endtrans %}</h1>
+            <p>
+                {% trans %}Delete charge confirmation message.{% endtrans %}
+            </p>
+            <form method="post">
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-save"></i>
+                    {% trans %}Confirm{% endtrans %}
+                </button>
+            </form>
+        </div>
     </div>
 {% endblock %}
