feat(living wage): calcul du reste à vivre par personne

--- a/templates/pages/dashboard/index.html.twig
+++ b/templates/pages/dashboard/index.html.twig
@@ -51,4 +51,14 @@
             }) }}
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-12 col-lg-8">
+            {{ sonata_block_render({ type: 'app.block.table.livingWage' }, {
+                livingWage: livingWage
+            }) }}
+        </div>
+    </div>
+
+
 {% endblock %}
