--- a/templates/pages/bank/account/share.html.twig
+++ b/templates/pages/bank/account/share.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base-connected.html.twig' %}
+{% extends app.request.isXmlHttpRequest ? 'base-connected-ajax-card.html.twig' : 'base-connected.html.twig' %}
 
 {% block title %}{% trans %}Share account{% endtrans %}{{ parent() }}{% endblock %}
 
@@ -26,13 +26,47 @@
                 <div class="col-12 col-lg-8">
                     {{ form_start(form) }}
                     {{ form_rest(form) }}
+
                     <button type="submit" class="btn btn-primary">
                         <i class="fas fa-save"></i>
                         {% trans %}Share{% endtrans %}
                     </button>
+
                     {{ form_end(form) }}
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block ajax_card_body %}
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-borderless">
+                {% for accountShare in account.accountShares %}
+                    <tr>
+                        <td>{{ accountShare.user.fullname }}</td>
+                        <td>{{ accountShare.type | readable_enum | trans }}</td>
+                        <td>
+                            <a href="{{ path('bank_account_unshare', { accountShare: accountShare.id }) }}">
+                                {% trans %}Remove{% endtrans %}
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div class="col-12">
+            {{ form_start(form) }}
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
+        </div>
+    </div>
+{% endblock %}
+
+{% block ajax_card_footer %}
+    <button type="submit" class="btn btn-primary">
+        <i class="fas fa-save"></i>
+        {% trans %}Share{% endtrans %}
+    </button>
 {% endblock %}
