--- a/templates/pages/bank/resource/add.html.twig
+++ b/templates/pages/bank/resource/add.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base-connected.html.twig' %}
+{% extends app.request.isXmlHttpRequest ? 'base-connected-ajax-card.html.twig' : 'base-connected.html.twig' %}
 
 {% block title %}{% trans %}Add resource{% endtrans %}{{ parent() }}{% endblock %}
 
@@ -6,13 +6,29 @@
     <div class="container">
         <div class="mb-3">
             <h1>{% trans %}Add resource{% endtrans %}</h1>
+
             {{ form_start(form) }}
             {{ form_rest(form) }}
+
             <button type="submit" class="btn btn-primary">
                 <i class="fas fa-save"></i>
                 {% trans %}Add{% endtrans %}
             </button>
+
             {{ form_end(form) }}
         </div>
     </div>
+{% endblock %}
+
+{% block ajax_card_body %}
+    {{ form_start(form) }}
+    {{ form_rest(form) }}
+    {{ form_end(form) }}
+{% endblock %}
+
+{% block ajax_card_footer %}
+    <button type="submit" class="btn btn-primary">
+        <i class="fas fa-save"></i>
+        {% trans %}Add{% endtrans %}
+    </button>
 {% endblock %}
