--- a/templates/pages/dashboard/index.html.twig
+++ b/templates/pages/dashboard/index.html.twig
@@ -3,65 +3,5 @@
 {% block title %}{% trans %}Dashboard{% endtrans %}{{ parent() }}{% endblock %}
 
 {% block body %}
-    <div class="mb-3">
-
-        <h1>{% trans %}Resources{% endtrans %}</h1>
-
-        <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4">
-                <ul class="list-group">
-                    {% for resource in accounts | resources %}
-                        <li class="list-group-item d-flex flex-row justify-content-between align-items-center">
-                            <div class="pe-1 flex-fill">
-                                {{ resource.name }}
-                            </div>
-                            <div class="ps-1">
-                                {{ resource.amount | format_currency('EUR') }}
-                            </div>
-                            <div class="ps-1">
-                                <a class="btn" href="{{ path('bank_resource_update', { account: resource.account.id, resource: resource.id }) }}">
-                                    <i class="fas fa-pencil-alt"></i>
-                                </a>
-                            </div>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <h1>{% trans %}Charges{% endtrans %}</h1>
-
-    <div class="row">
-        {% for account in accounts %}
-            {% if is_granted('view', account) %}
-                <div class="col-12 col-sm-6 col-lg-4">
-                    {{ sonata_block_render({ type: 'app.block.card.account' }, {
-                        account: account
-                    }) }}
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
-
-    <h1>{% trans %}Transfers{% endtrans %}</h1>
-
-    <div class="row">
-        <div class="col-12 col-lg-8">
-            {{ sonata_block_render({ type: 'app.block.table.transfers' }, {
-                transfers: transfers
-            }) }}
-        </div>
-    </div>
-
-    <h1>{% trans %}Living Wage{% endtrans %}</h1>
-
-    <div class="row">
-        <div class="col-12 col-lg-8">
-            {{ sonata_block_render({ type: 'app.block.table.livingWage' }, {
-                livingWage: livingWage
-            }) }}
-        </div>
-    </div>
-
+    <div id="app"></div>
 {% endblock %}
