--- a/templates/blocks/tables/table--living-wage.html.twig
+++ b/templates/blocks/tables/table--living-wage.html.twig
@@ -15,4 +15,6 @@
     </tbody>
 </table>
 
-Total: {{ livingWage.total | format_currency('EUR') }}
+<div class="text-end">
+    Total: {{ livingWage.total | format_currency('EUR') }}
+</div>
